# LTR_Engine_II

./: .gitignore  CMakeLists.txt
assets/shaders/opengl/: basicSprite.frag  basicSpriteWithFilter.frag  basicSpriteWithFilter.vert  postProcessing.frag  postProcessing.vert  skybox.frag  skybox.vert
assets/shaders/opengl/default/: default_mesh_shader.vert  default_sprite_shader.frag
src/: main.cpp
src/game/: GameEngine.cpp  GameEngine.h
src/game/board/: Chessboard.cpp  Chessboard.h  board_pattern.cpp  board_pattern.h  context.h  piece_loader.cpp  piece_loader.h
src/game/characters/: characters_List.cpp  characters_List.h
src/game/characters/moves/: piece_moves.cpp  piece_moves.h
src/game/characters/pieces/: Pieces.cpp  Pieces.h  pieces_List.cpp  pieces_List.h
src/game/characters/pieces/bishop/: Bishop.cpp  Bishop.h  Medusa_Saber.cpp  Medusa_Saber.h  Merlin.cpp  Merlin.h  Tamamo.cpp  Tamamo.h
src/game/characters/pieces/king/: Artoria.cpp  Artoria.h  Gilgamesh.cpp  Gilgamesh.h  King.cpp  King.h
src/game/characters/pieces/knight/: Kintoki_Rider.cpp  Kintoki_Rider.h  Knight.cpp  Knight.h  Okita.cpp  Okita.h  Ushiwakamaru.cpp  Ushiwakamaru.h
src/game/characters/pieces/pawn/: Nemo_Marine.cpp  Nemo_Marine.h  Pawn.cpp  Pawn.h
src/game/characters/pieces/queen/: Kukulkan.cpp  Kukulkan.h  Nitocris_Alter.cpp  Nitocris_Alter.h  Queen.cpp  Queen.h  Sesshoin_Kiara.cpp  Sesshoin_Kiara.h
src/game/characters/pieces/rook/: Arceuid.cpp  Arceuid.h  Rook.cpp  Rook.h  Xu_Fu.cpp  Xu_Fu.h
src/game/effects/: EffectHandler.cpp  EffectHandler.h  effect_List.cpp  effect_List.h  effect_context.h  effects.cpp  effects.h
src/game/inputs/: Key.cpp  Key.h  keys.cpp  keys.h  mouseInputs.cpp  mouseInputs.h
src/game/inputs/clickables/: Button.cpp  Button.h  CheckBox.cpp  CheckBox.h  ClickableArea.cpp  ClickableArea.h  RadioButton.cpp  RadioButton.h  clickables.cpp  clickables.h
src/game/phases/: Event.h  PhaseHandler.cpp  PhaseHandler.h  event_type.cpp  event_type.h  phase_context.h  selection.h
src/physics/: PhysicsEngine.cpp  PhysicsEngine.h  SpriteTarget.h
src/physics/nodes/: ControllableNode.cpp  ControllableNode.h  Node.cpp  Node.h
src/physics/objects/: default_nodes.cpp  default_nodes.h
src/platform/: platform.h  platform_header.h  platform_opengl_header.h  unix.cpp  windows.cpp
src/rendering/: Camera.cpp  Camera.h  Displayable.h  RenderEngine.cpp  RenderEngine.h
src/rendering/displayables/: Displayable.h  TexturedMesh.cpp  TexturedMesh.h
src/rendering/objects/: default_arrays.h  default_objects.cpp  default_objects.h
src/rendering/opengl/: OpenGLRenderer.cpp  OpenGLRenderer.h  glFunctions.cpp  glFunctions.h  glRenderer.cpp  glRenderer.h
src/rendering/opengl/displayables/: Sprite.cpp  Sprite.h  SpriteGroup.cpp  SpriteGroup.h  SpriteWithFilter.cpp  SpriteWithFilter.h  spritePositioner.h
src/rendering/opengl/shading/: Shader.cpp  Shader.h  shaders.cpp  shaders.h
src/rendering/opengl/textures/: CubeMap.cpp  CubeMap.h  Texture.cpp  Texture.h  cubemaps.cpp  cubemaps.h  textures.cpp  textures.h
src/rendering/opengl/ui/: uiElements.cpp  uiElements.h
src/rendering/opengl/vao/: VAO.cpp  VAO.h  vaos.cpp  vaos.h
src/utils/: Engine.h
src/utils/config/: game_cfg.h  rendering_cfg.h
src/utils/file_io/: fileIO.cpp  fileIO.h
src/utils/logging/: log.cpp  log.h
